updated Abstract Service Tests
Hazelcast now uses abstract tests